agglomerative clustering done on hdbscan output

--- a/Clustering/Dim_Reduction_UMAP.ipynb
+++ b/Clustering/Dim_Reduction_UMAP.ipynb
@@ -479,12 +479,12 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "23",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# HDBSCAN Centroids -> Distance Clusters (with no noise)"
+   ]
   },
   {
    "cell_type": "code",
@@ -492,7 +492,68 @@
    "id": "24",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# --- META-CLUSTERING WITH AGGLOMERATIVE ---\n",
+    "import numpy as np\n",
+    "from sklearn.cluster import AgglomerativeClustering\n",
+    "from scipy.spatial import distance_matrix\n",
+    "\n",
+    "# --- USER HYPERPARAMETERS ---\n",
+    "# You can toggle these for experiments:\n",
+    "USE_CENTROIDS = True         # if False, use medoids (slower, more robust)\n",
+    "LINKAGE = \"ward\"             # \"ward\", \"complete\", \"average\", \"single\"\n",
+    "N_META = None                # if None, use DIST_THRESHOLD\n",
+    "DIST_THRESHOLD = 5.0         # cut dendrogram at this distance if N_META is None\n",
+    "\n",
+    "# --- COLLECT NON-NOISE CLUSTERS ---\n",
+    "hdb_labels = cluster_labels  # from your HDBSCAN run\n",
+    "unique_labels = sorted([lbl for lbl in np.unique(hdb_labels) if lbl != -1])\n",
+    "\n",
+    "# --- COMPUTE CENTROIDS OR MEDOIDS ---\n",
+    "summaries = []\n",
+    "label_to_index = {}\n",
+    "for i, lbl in enumerate(unique_labels):\n",
+    "    members = all_embeds[hdb_labels == lbl]\n",
+    "    if USE_CENTROIDS:\n",
+    "        summary = members.mean(axis=0)\n",
+    "    else:\n",
+    "        # medoid: point with minimum total distance to others\n",
+    "        dists = distance_matrix(members, members)\n",
+    "        medoid_idx = np.argmin(dists.sum(axis=1))\n",
+    "        summary = members[medoid_idx]\n",
+    "    summaries.append(summary)\n",
+    "    label_to_index[lbl] = i\n",
+    "summaries = np.vstack(summaries)\n",
+    "\n",
+    "# --- RUN AGGLOMERATIVE ---\n",
+    "agg = AgglomerativeClustering(\n",
+    "    n_clusters=N_META,\n",
+    "    distance_threshold=None if N_META else DIST_THRESHOLD,\n",
+    "    linkage=LINKAGE\n",
+    ")\n",
+    "meta_labels = agg.fit_predict(summaries)\n",
+    "\n",
+    "# --- MAP HDBSCAN CLUSTERS TO META-CLUSTERS ---\n",
+    "cluster_to_meta = {lbl: int(meta_labels[idx]) for lbl, idx in label_to_index.items()}\n",
+    "\n",
+    "# --- ASSIGN EVERY POINT TO A META-CLUSTER ---\n",
+    "final_labels = np.full_like(hdb_labels, fill_value=-1)\n",
+    "for lbl in unique_labels:\n",
+    "    final_labels[hdb_labels == lbl] = cluster_to_meta[lbl]\n",
+    "\n",
+    "# --- HANDLE NOISE POINTS (-1) ---\n",
+    "noise_mask = (hdb_labels == -1)\n",
+    "if noise_mask.any():\n",
+    "    noise_points = all_embeds[noise_mask]\n",
+    "    dists = distance_matrix(noise_points, summaries)\n",
+    "    nearest_idx = np.argmin(dists, axis=1)\n",
+    "    final_labels[noise_mask] = meta_labels[nearest_idx]\n",
+    "\n",
+    "print(\"Final meta-cluster labels shape:\", final_labels.shape)\n",
+    "print(\"Unique meta-clusters:\", np.unique(final_labels))\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -500,7 +561,34 @@
    "id": "25",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# --- DENDROGRAM VISUALIZATION ---\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.cluster.hierarchy import linkage, dendrogram\n",
+    "\n",
+    "# Build hierarchical linkage on the summaries (centroids/medoids)\n",
+    "Z = linkage(summaries, method=LINKAGE)\n",
+    "\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "dendro = dendrogram(\n",
+    "    Z,\n",
+    "    labels=unique_labels,     # so each leaf corresponds to original HDBSCAN cluster\n",
+    "    leaf_rotation=90,\n",
+    "    leaf_font_size=10,\n",
+    "    color_threshold=0,        # let us control colors later if needed\n",
+    ")\n",
+    "\n",
+    "# Draw horizontal cut line (same as DIST_THRESHOLD from your hyperparams)\n",
+    "if N_META is None:\n",
+    "    plt.axhline(y=DIST_THRESHOLD, c=\"red\", ls=\"--\", lw=2)\n",
+    "\n",
+    "plt.title(\"Agglomerative Clustering Dendrogram of HDBSCAN Summaries\")\n",
+    "plt.xlabel(\"Original HDBSCAN Clusters\")\n",
+    "plt.ylabel(\"Distance\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -524,233 +612,183 @@
    "id": "28",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "43",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "45",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "46",
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import torch\n",
+    "# --- REPRODUCTION / HOLDOUT TESTS FOR AGGLOMERATIVE -> INFERENCE ---\n",
     "import numpy as np\n",
-    "from pathlib import Path\n",
-    "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.mplot3d import Axes3D  # registers 3D projection\n",
+    "from collections import Counter, defaultdict\n",
+    "from scipy.spatial import distance_matrix\n",
+    "from sklearn.cluster import AgglomerativeClustering\n",
     "\n",
-    "# --- CONFIG ---\n",
-    "umap_dir = Path(\"../Results/EmbeddingDataUMAP\")\n",
+    "# Helper: assign new points to meta-clusters using nearest summary\n",
+    "def assign_new_points(new_points, summaries, meta_labels):\n",
+    "    dists = distance_matrix(new_points, summaries)  # (n_new, n_summaries)\n",
+    "    nearest_idx = np.argmin(dists, axis=1)\n",
+    "    return meta_labels[nearest_idx], nearest_idx  # returns meta ids and which summary index chosen\n",
     "\n",
-    "# --- LOAD ALL BATCHES ---\n",
-    "batch_files = sorted(umap_dir.glob(\"batch_*.pt\"))\n",
-    "all_embeds = []\n",
+    "# ------------------------------\n",
+    "# 1) POINT-LEVEL RECONSTRUCTION\n",
+    "# ------------------------------\n",
+    "def point_reconstruction_test(all_embeds, final_labels, summaries, meta_labels,\n",
+    "                              sample_size=1000, random_state=0):\n",
+    "    \"\"\"\n",
+    "    Randomly sample points and test if nearest-summary assignment reproduces final_labels.\n",
+    "    \"\"\"\n",
+    "    rng = np.random.RandomState(random_state)\n",
+    "    n = all_embeds.shape[0]\n",
+    "    sample_size = min(sample_size, n)\n",
+    "    idx = rng.choice(n, size=sample_size, replace=False)\n",
+    "    sampled_points = all_embeds[idx]\n",
+    "    pred_meta, nearest_summary_idx = assign_new_points(sampled_points, summaries, meta_labels)\n",
+    "    true_meta = final_labels[idx]\n",
     "\n",
+    "    acc = (pred_meta == true_meta).mean()\n",
+    "    mismatches = np.where(pred_meta != true_meta)[0]\n",
     "\n",
-    "for f in batch_files:\n",
-    "    print(f\"Loading {f.name} ...\")\n",
-    "    batch_tensor = torch.load(f, weights_only=True)\n",
-    "    all_embeds.append(batch_tensor.numpy())\n",
+    "    print(f\"[Point test] Sampled {sample_size} points. Accuracy = {acc:.4f}. Mismatches = {len(mismatches)}\")\n",
+    "    if len(mismatches) > 0:\n",
+    "        # show up to 10 mismatch examples with helpful context\n",
+    "        print(\"Examples (index_in_sample, global_index, true_meta, pred_meta, nearest_summary_idx):\")\n",
+    "        for ii in mismatches[:10]:\n",
+    "            gi = idx[ii]\n",
+    "            print(ii, gi, int(true_meta[ii]), int(pred_meta[ii]), int(nearest_summary_idx[ii]))\n",
+    "    return {\"accuracy\": acc, \"n_sample\": sample_size, \"mismatch_indices_sample\": mismatches, \"sample_global_idx\": idx}\n",
     "\n",
+    "# ------------------------------\n",
+    "# 2) SUMMARY / CLUSTER HOLDOUT\n",
+    "# ------------------------------\n",
+    "def summary_holdout_test(unique_labels, summaries, meta_labels,\n",
+    "                         holdout_k=5, random_state=0):\n",
+    "    \"\"\"\n",
+    "    Hold out some HDBSCAN clusters (their summaries). Re-fit agglomerative on remaining summaries,\n",
+    "    map new meta clusters back to original meta labels (majority vote), then evaluate:\n",
+    "      - how well held-out summaries map back to original meta labels\n",
+    "    \"\"\"\n",
+    "    rng = np.random.RandomState(random_state)\n",
+    "    n_summ = summaries.shape[0]\n",
+    "    holdout_k = min(holdout_k, n_summ - 1)\n",
+    "    # choose holdout by summary index (these correspond to unique_labels order)\n",
+    "    holdout_indices = rng.choice(n_summ, size=holdout_k, replace=False)\n",
+    "    remain_indices = np.array([i for i in range(n_summ) if i not in set(holdout_indices)], dtype=int)\n",
     "\n",
+    "    summaries_remain = summaries[remain_indices]\n",
+    "    orig_meta_remain = meta_labels[remain_indices]  # original meta labels for these summaries\n",
     "\n",
+    "    # Re-fit agglomerative on remaining summaries using the same hyperparams (LINKAGE / DIST_THRESHOLD / N_META)\n",
+    "    agg_retrain = AgglomerativeClustering(\n",
+    "        n_clusters=N_META,\n",
+    "        distance_threshold=None if N_META else DIST_THRESHOLD,\n",
+    "        linkage=LINKAGE\n",
+    "    )\n",
+    "    new_meta_remain = agg_retrain.fit_predict(summaries_remain)  # labels for each remaining summary\n",
     "\n",
-    "all_embeds = np.vstack(all_embeds)\n",
-    "# Center and scale each axis\n",
-    "all_embeds = (all_embeds - all_embeds.mean(axis=0)) / all_embeds.std(axis=0)\n",
+    "    # Build mapping: new_meta_id -> original meta_id (majority vote among members)\n",
+    "    new_to_orig = {}\n",
+    "    for nm in np.unique(new_meta_remain):\n",
+    "        member_idxs = np.where(new_meta_remain == nm)[0]\n",
+    "        orig_labels_for_members = orig_meta_remain[member_idxs]\n",
+    "        # majority vote\n",
+    "        most_common_orig = Counter(orig_labels_for_members).most_common(1)[0][0]\n",
+    "        new_to_orig[int(nm)] = int(most_common_orig)\n",
     "\n",
-    "# --- 3D SCATTER PLOT ---\n",
-    "fig = plt.figure(figsize=(8, 6))\n",
-    "ax = fig.add_subplot(111, projection=\"3d\")\n",
+    "    # Assign each held-out summary to nearest remaining summary -> new_meta -> mapped back to original meta\n",
+    "    held_summaries = summaries[holdout_indices]\n",
+    "    d = distance_matrix(held_summaries, summaries_remain)  # (n_holdout, n_remain)\n",
+    "    nearest_remain_idx = np.argmin(d, axis=1)             # indices into summaries_remain\n",
+    "    assigned_new_meta = new_meta_remain[nearest_remain_idx]\n",
+    "    assigned_orig_meta_via_map = np.array([new_to_orig[int(x)] for x in assigned_new_meta])\n",
     "\n",
-    "x, y, z = all_embeds[:, 0], all_embeds[:, 1], all_embeds[:, 2]\n",
+    "    # Ground truth for held-out summaries:\n",
+    "    true_orig_meta_holdout = meta_labels[holdout_indices]\n",
     "\n",
-    "ax.scatter(x, y, z, s=1, alpha=0.5)\n",
+    "    # Compute accuracy\n",
+    "    acc_holdout_summ = (assigned_orig_meta_via_map == true_orig_meta_holdout).mean()\n",
     "\n",
-    "ax.set_xlabel(\"UMAP-1\")\n",
-    "ax.set_ylabel(\"UMAP-2\")\n",
-    "ax.set_zlabel(\"UMAP-3\")\n",
-    "ax.set_title(\"3D UMAP Embeddings\")\n",
+    "    print(f\"[Summary holdout] Held out {len(holdout_indices)} summaries. Accuracy (summary-level) = {acc_holdout_summ:.4f}\")\n",
     "\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n"
+    "    # Return detailed info so user can inspect mismatches\n",
+    "    results = {\n",
+    "        \"holdout_summary_indices\": holdout_indices,\n",
+    "        \"nearest_remain_idx\": nearest_remain_idx,\n",
+    "        \"assigned_new_meta\": assigned_new_meta,\n",
+    "        \"assigned_orig_meta_via_map\": assigned_orig_meta_via_map,\n",
+    "        \"true_orig_meta_holdout\": true_orig_meta_holdout,\n",
+    "        \"accuracy_summary_level\": acc_holdout_summ,\n",
+    "        \"new_to_orig_mapping\": new_to_orig,\n",
+    "        \"remain_indices\": remain_indices,\n",
+    "        \"new_meta_remain\": new_meta_remain\n",
+    "    }\n",
+    "    return results\n",
+    "\n",
+    "# ------------------------------\n",
+    "# USAGE EXAMPLES (run these lines)\n",
+    "# ------------------------------\n",
+    "# 1) Point-level test (fast)\n",
+    "pt_test_res = point_reconstruction_test(\n",
+    "    all_embeds=all_embeds,\n",
+    "    final_labels=final_labels,\n",
+    "    summaries=summaries,\n",
+    "    meta_labels=meta_labels,\n",
+    "    sample_size=1000,\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "# 2) Summary-holdout test (re-fits agglomerative on remaining summaries)\n",
+    "holdout_res = summary_holdout_test(\n",
+    "    unique_labels=unique_labels,\n",
+    "    summaries=summaries,\n",
+    "    meta_labels=meta_labels,\n",
+    "    holdout_k=5,\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "# Optional deeper check: for each held-out cluster, evaluate point-level assignment accuracy\n",
+    "def heldout_points_eval(all_embeds, hdb_labels, holdout_summary_indices, unique_labels,\n",
+    "                        summaries_remain, new_meta_remain, new_to_orig_map):\n",
+    "    \"\"\"\n",
+    "    For each held-out HDBSCAN cluster index (index into summaries / unique_labels),\n",
+    "    evaluate the point-level assignment accuracy when assigning points to remaining summaries.\n",
+    "    \"\"\"\n",
+    "    per_cluster_stats = {}\n",
+    "    for sidx in holdout_summary_indices:\n",
+    "        original_hdb_label = unique_labels[sidx]\n",
+    "        members_mask = (hdb_labels == original_hdb_label)\n",
+    "        pts = all_embeds[members_mask]\n",
+    "        if pts.shape[0] == 0:\n",
+    "            per_cluster_stats[original_hdb_label] = {\"n_points\": 0}\n",
+    "            continue\n",
+    "        d = distance_matrix(pts, summaries_remain)\n",
+    "        nearest_idx = np.argmin(d, axis=1)\n",
+    "        assigned_new_meta = new_meta_remain[nearest_idx]\n",
+    "        assigned_orig_meta = np.array([new_to_orig_map[int(x)] for x in assigned_new_meta])\n",
+    "        true_meta = final_labels[members_mask]\n",
+    "        acc = (assigned_orig_meta == true_meta).mean()\n",
+    "        per_cluster_stats[original_hdb_label] = {\n",
+    "            \"n_points\": pts.shape[0],\n",
+    "            \"accuracy\": float(acc),\n",
+    "            \"examples\": {\n",
+    "                \"true_meta_sample\": true_meta[:5].tolist(),\n",
+    "                \"assigned_meta_sample\": assigned_orig_meta[:5].tolist()\n",
+    "            }\n",
+    "        }\n",
+    "    return per_cluster_stats\n",
+    "\n",
+    "# If you want to run the point-level heldout evaluation, prepare args from holdout_res:\n",
+    "# build summaries_remain and new_meta_remain using holdout_res info:\n",
+    "remain_indices = holdout_res[\"remain_indices\"]\n",
+    "summaries_remain = summaries[remain_indices]\n",
+    "new_meta_remain = holdout_res[\"new_meta_remain\"]\n",
+    "new_to_orig_map = holdout_res[\"new_to_orig_mapping\"]\n",
+    "per_cluster_stats = heldout_points_eval(all_embeds, hdb_labels,\n",
+    "                                        holdout_res[\"holdout_summary_indices\"],\n",
+    "                                        unique_labels,\n",
+    "                                        summaries_remain, new_meta_remain, new_to_orig_map)\n",
+    "\n",
+    "# Print brief summary\n",
+    "print(\"\\nPer-heldout-cluster point-level stats (up to 10 clusters):\")\n",
+    "for i, (cl, st) in enumerate(per_cluster_stats.items()):\n",
+    "    if i >= 10: break\n",
+    "    print(cl, st)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
